Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114877

QDoc doesn't catch private pure virtual methods

XMLWordPrintable

    • All
    • 213b2e569 (master), d4d85cd4b (dev), 77b014b3a (dev), 2822ab16c (dev), 4b94d528c (dev), d9f862fe3 (dev), 595e95f22 (dev), 4b57aee41 (dev), e81bfcc25 (dev), e60139313 (dev), 342013c84 (dev)
    • DaVinci 123, DaVinci 124

      It's a valid design to provide pure virtual private method. In this case the subclasses are forced to implement it, but are not allowed to call it. However, the qdoc doesn't show the documentation for private method. When the method is moved to the protected section it's shown.

        For Gerrit Dashboard: QTBUG-114877
        # Subject Branch Project Status CR V

            paulwicking Paul Wicking
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: