TaskTree: Pretend TaskInterface::start() is protected for qdoc

Otherwise, the docs are not shown.

Task-number: QTBUG-114877
Change-Id: I0cc3e3890c57cd3c5970c0bc9f0350e9934748c5
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: hjk <hjk@qt.io>